infrastructure/grafana-mimir/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "${infranamespaceprefix}grafana-mimir"
  labels:
    istio.io/rev: stable
    name: "${infranamespaceprefix}grafana-mimir"
