infrastructure/grafana-mimir/requestauthentication-echo.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: grafana
  namespace: ${infranamespaceprefix}grafana-mimir
spec:
  jwtRules:
  - issuer: "https://identity.pauwelslabs.com/realms/pauwels-labs-main"
    jwksUri: https://identity.pauwelslabs.com/realms/pauwels-labs-main/protocol/openid-connect/certs
    fromHeaders:
    - name: "x-forwarded-id-token"
  selector:
    matchLabels:
      run: echo
