infrastructure/grafana-mimir/virtualservice-echo.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo
  namespace: "${infranamespaceprefix}grafana-mimir"
spec:
  hosts:
  - echo.pauwelslabs.com
  gateways:
  - ${infranamespaceprefix}istio-ingress/pauwels-labs
  http:
  - name: "echo"
    route:
    - destination:
        port:
          number: 8080
        host: echo
