infrastructure/grafana-mimir/authorizationpolicy-echo.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: echo
  namespace: "${infranamespaceprefix}grafana-mimir"
spec:
  selector:
    matchLabels:
      run: echo
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - to:
    - operation:
        hosts: ["echo.pauwelslabs.com"]
