infrastructure/grafana-mimir/authorizationpolicy-query-frontend-allow-nothing.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: ${infranamespaceprefix}grafana-mimir
spec: null
  # selector:
  #   matchLabels:
  #     app.kubernetes.io/instance: grafana-mimir
  #     app.kubernetes.io/component: query-frontend
