infrastructure/grafana-mimir/authorizationpolicy-query-frontend.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: query-frontend
  namespace: "${infranamespaceprefix}grafana-mimir"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: grafana-mimir
      app.kubernetes.io/component: query-frontend
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals:
        - "https://identity.pauwelslabs.com/realms/pauwels-labs-main/*"
    to:
    - operation:
        paths:
        - "/prometheus"
